wire_bridge/build/log/idf_py_stderr_output_67134
Command: make -j 6 all
/Users/macbookair/esp/ETH_02/wire_bridge/main/wire_bridge.c: In function 'app_main':
/Users/macbookair/esp/ETH_02/wire_bridge/main/wire_bridge.c:70:5: error: implicit declaration of function 'lvgl_ui_start' [-Wimplicit-function-declaration]
   70 |     lvgl_ui_start();
      |     ^~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/wire_bridge.c.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
